<resources>
    <string name="app_name">Doomo</string>
    <string name="title_home">Accueil</string>
    <string name="title_library">Bibliothèque</string>
    <string name="page_title_library">Ma bibliothèque</string>
    <string name="title_nfc">Nfc</string>
    <string name="title_account">Compte</string>
    <string name="storyTitleText">TextView</string>
    <string name="storyDescriptionText">TextView</string>
    <string name="illustration_riri">IMAGE</string>
    <string name="text_story_details">Détails de l\'histoire</string>
    <string name="buttoninformations">button Informations</string>
    <string name="buttonplayinterraction">button Play Interraction</string>
    <string name="text_story_description">Story description</string>
    <string name="text_button_start_interraction">Lancer l\'histoire</string>
    <string name="month_story_button">Lire l\'histoire du mois</string>
    <string name="header_image">header image</string>
    <string name="favourite_story_title">Mes histoires favorites</string>
    <string name="title_story_favourite">Riri la \n grenouille</string>
    <string name="image_description">image description</string>
    <string name="toy_image_view">toy image view</string>
    <string name="button_faq">Lire la F.A.Q.</string>
    <string name="logo">logo</string>
    <string name="text_story_favourite">Grenouille nuit étoilée</string>
    <string name="association_informations_title">Dons associations</string>
    <string name="association_informations_text">Chez Doomo on tient à donner du sens à nos projets. Pour chaque abonnement pris, 15% du prix sera reversé à nos associations partenaires de défense des animaux.</string>
    <string name="caracter_list_title">Les personnages</string>
    <string name="projet_title">Le projet</string>
    <string name="projet_description">Créée par des étudiants, Doomo est une application dédiée aux enfants qui leur permet de dévouvrir des animaux qui ont échappé à leur disparition. Le but est de ré-enchanter les plus jeune à travers des histoires tirées de la réalité qui finissent bien. :)</string>
    <string name="info_abonnement_title">Découvrez nos abonnements</string>
    <string name="info_abonnement_text">"A partir de 19,99€ / mois "</string>
    <string name="button_month_story">Lire l\'histoire du mois</string>
    <string name="button_start_interaction">Lancer l\'histoire</string>
    <string name="button_start_reading">Ouvrir la fiche de lecture</string>
    <string name="fun_fact_title">L\'info cool !</string>
    <string name="fun_fact_text">Le mot arlequin désigne un personnage de la comédie italienne dont le vêtement est formé de pièces diverses couleurs. Comme nos grenouilles !</string>
    <string name="reappear_info_title">Leur réapparition</string>
    <string name="reappear_info_text">Depuis plusieurs dizaines d\'années, les biologistes craignent que cette espèce en danger critique d\'extinction ne soit perdue. Une victime de plus de la propagation d\'un champignon tueur d\'amphibiens connu sous le nom de chytride. Malheureusement, les scientifiques ont constaté que ce champignon était particulièrement fatal pour les grenouilles arlequin.</string>
    <string name="home_title">Son lieu d\'habitation</string>
    <string name="doomo">Doomo</string>
    <string name="fiche_detail">Fiche histoire</string>
    <string name="page_title_nfc">Scan des figurines</string>
    <string name="page_title_help">F.A.Q. et Assistance</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>