<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bddi.doomo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.bddi.doomo.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_nfc"
        android:name="com.bddi.doomo.ui.nfc.NfcFragment"
        android:label="@string/title_nfc"
        tools:layout="@layout/fragment_nfc" />

    <fragment
        android:id="@+id/account"
        android:name="com.bddi.doomo.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/story_details"
        android:name="com.bddi.doomo.ui.story_details.StoryDetailsFragment"
        android:label="@string/title_nfc"
        tools:layout="@layout/fragment_nfc" />
    <action
        android:id="@+id/action_global_navigation_story_details"
        app:destination="@id/story_details"
        app:enterAnim="@anim/slide_in_up"
        app:exitAnim="@anim/slide_out_down"
        app:launchSingleTop="true" />
</navigation>