<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="80dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/begin_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/image_header_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/header_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/top_illustration" />
        <ImageView
            android:id="@+id/doomo_logo"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            app:layout_constraintStart_toStartOf="@id/begin_guideline"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo_app_mini_blanc"
            android:layout_marginTop="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_month_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:paddingVertical="20dp"
            android:text="@string/month_story_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/image_header_home"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/begin_guideline"
            app:cornerRadius="10dp"/>

        <TextView
            android:id="@+id/favourite_title_text"
            android:fontFamily="@font/baloochettan_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/favourite_story_title"
            android:textColor="?colorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/image_header_home" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@id/favourite_title_text"
            app:cardCornerRadius="30dp"
            android:backgroundTint="@color/backgroundColor">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="100"
                android:orientation="horizontal"            >

                <ImageView
                    android:id="@+id/story_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:src="@drawable/illustration_riri"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/image_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/story_image"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_story_title"
                        android:fontFamily="@font/baloochettan_semibold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/title_story_favourite"
                        android:textColor="?colorSecondary"
                        android:layout_marginStart="30dp"/>

                    <TextView
                        android:id="@+id/text_story_subtitle"
                        android:fontFamily="@font/baloochettan_medium"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:text="@string/text_story_favourite"
                        android:layout_marginStart="30dp"/>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/story_play_button_home"
                app:srcCompat="@drawable/ic_baseline_play_arrow_24"
                android:backgroundTint="?colorPrimary"
                app:tint="@color/white"
                app:fabCustomSize="45dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:elevation="0dp"
                app:borderWidth="0dp"
                android:contentDescription="@string/buttonplayinterraction"
                android:layout_gravity="center_vertical|center_horizontal"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_abonnement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/card_view_home"
            android:src="@drawable/kid"
            app:shapeAppearanceOverlay="@style/border_radius"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="381dp"
            android:adjustViewBounds="true"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/begin_guideline"
            app:layout_constraintBottom_toBottomOf="@+id/image_abonnement">
            <TextView
                android:id="@+id/info_abonnement_title"
                android:fontFamily="@font/baloochettan_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_abonnement_title"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/info_abonnement_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/info_abonnement_text"
                android:textColor="@color/white" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/info_association_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/image_abonnement">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="30dp">

                <TextView
                    android:id="@+id/info_association_title"
                    android:fontFamily="@font/baloochettan_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_association_title"
                    android:textColor="?colorSecondary"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/info_association_text"
                    android:fontFamily="@font/baloochettan_medium"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAlignment="center"
                    android:layout_weight="0.5"
                    android:text="@string/info_association_text"
                    android:textColor="@color/gray"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/info_association_title" />

                <LinearLayout
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_association_text">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView6"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/logo_wwf"
                        app:shapeAppearanceOverlay="@style/shape_circle" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageView7"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/logo_peta"
                        app:shapeAppearanceOverlay="@style/shape_circle" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/caracter_list_title"
            android:fontFamily="@font/baloochettan_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/caracter_list_title"
            android:textColor="?colorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/info_association_card" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/caracter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/riri_profil"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@+id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/caracter_list_title"
            android:adjustViewBounds="true"
            app:shapeAppearanceOverlay="@style/shape_circle"/>

        <ImageView
            android:id="@+id/toy_imageView"
            android:fontFamily="@font/baloochettan_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/figurine"
            android:adjustViewBounds="true"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@+id/begin_guideline"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintTop_toBottomOf="@+id/caracter_button"
            android:contentDescription="@string/toy_image_view" />

        <TextView
            android:id="@+id/projet_title"
            android:fontFamily="@font/baloochettan_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/projet_title"
            android:textColor="?colorSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/toy_imageView" />

        <TextView
            android:id="@+id/projet_description"
            android:fontFamily="@font/baloochettan_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/projet_description"
            android:textColor="@color/gray"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@id/projet_title" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/video_projet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/begin_guideline"
            app:layout_constraintTop_toBottomOf="@+id/projet_description"
            android:src="@drawable/video"
            app:shapeAppearanceOverlay="@style/border_radius"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:paddingVertical="20dp"
            android:text="@string/button_faq"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginVertical="30dp"
            app:layout_constraintTop_toBottomOf="@id/video_projet"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/begin_guideline"
            app:cornerRadius="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>