<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_list_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        tools:ignore="MissingConstraints"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/storyTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?colorSecondary"
                android:textSize="15sp"
                android:text="@string/storyTitleText"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/storyImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                app:shapeAppearanceOverlay="@style/border_radius"
                app:srcCompat="@drawable/illustration_riri" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom|center_horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/story_information_button"
                app:srcCompat="@drawable/ic_baseline_help_24"
                android:backgroundTint="?colorSecondary"
                app:tint="@color/white"
                app:fabCustomSize="45dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                app:elevation="0dp"
                app:borderWidth="0dp"
                android:contentDescription="@string/buttoninformations" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/story_play_button"
                app:srcCompat="@drawable/ic_baseline_play_arrow_24"
                android:backgroundTint="?colorPrimary"
                app:tint="@color/white"
                app:fabCustomSize="45dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                app:elevation="0dp"
                app:borderWidth="0dp"
                android:contentDescription="@string/buttonplayinterraction" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>